# resilient-sdk

./: .gitignore  README.md
.github/workflows/: ci.yml  release.yml
cli/: go.mod  go.sum  main.go
cli/cmd/: anomalies.go  explain.go  init.go  report.go  root.go  top.go
docs/: running-locally.md
sdk/: pyproject.toml
sdk/resilient/: __init__.py  circuit.py  classifier.py  config.py  decorator.py  store.py
sdk/tests/: test_circuit.py  test_classifier.py
