[tool.poetry]
name = "resilient-sdk"
version = "0.1.0"
description = "Adaptive retry SDK with persistent failure memory"
authors = ["Abhishek Dasgupta <abhishek_dasgupta@zykrr.com>"]
readme = "../README.md"
homepage = "https://github.com/abhishekgit03/resilient-sdk"
repository = "https://github.com/abhishekgit03/resilient-sdk"
keywords = ["retry", "resilience", "observability", "backoff", "circuit-breaker"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
packages = [{ include = "resilient" }]

[tool.poetry.dependencies]
python = "^3.10"
asyncpg = "^0.29"
tomli = { version = "^2.0", python = "<3.11" }  # built-in in 3.11+

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
